--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
     <section id="intro">
         <div class="container-fluid">
             <div class="row justify-content-center align-items-center">
-                <div class="col-md-12 mt-5 ms-5">
+                <div class="col-md-12 mt-5 m1-2">
                     <div class="name mt-5 ms-5">
                         <h4 class="display-5 text-start text-light"><strong><em><u>Agnes</u></em></strong> Kariuki,</h4>
                     </div>
                     <div class="role mt-3 ms-5">
-                        <p class="fs-3 text-start">Backend Developer</p>
+                        <p class="fs-3 fw-medium text-start">Backend Developer based in <strong><u>Kenya</u></strong> </p>
                     </div>
+                    <div class="mt-5 ms-5">
+                        <a class="border text-light py-2 px-4 rounded-3 skillbtn" href="#">Skills</a>
+                        <a class="border text-light py-2 px-3 rounded-3 ms-3 projectbtn" href="#">Projects</a>
+                    </div>
+                    <!-- <div>
+                        
+                    </div> -->
                 </div>
             </div>
         </div>
