--- a/index.html
+++ b/index.html
@@ -7,33 +7,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-
     <section id="intro">
         <div class="container-fluid">
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-12 mt-5 m1-2">
                     <div class="name mt-5 ms-5">
-                        <h4 class="display-5 text-start text-light"><strong><em><u>Agnes</u></em></strong> Kariuki,</h4>
+                        <h4 class="display-5 text-center text-dark"><strong><em><u>Agnes</u></em></strong> Kariuki,</h4>
                     </div>
                     <div class="role mt-3 ms-5">
-                        <p class="fs-3 fw-medium text-start">Backend Developer based in <strong><u>Kenya</u></strong> </p>
+                        <p class="fs-3 fw-medium text-center">Backend Developer based in Kenya </p>
                     </div>
-                    <div class="mt-5 ms-5">
-                        <a class="border text-light py-2 px-4 rounded-3 skillbtn" href="#">Skills</a>
-                        <a class="border text-light py-2 px-3 rounded-3 ms-3 projectbtn" href="#">Projects</a>
+                    <div class="mt-5 text-center">
+                        <a class="border border-danger-subtle text-dark  py-2 px-4 rounded-3 skillbtn"
+                            href="#">Skills</a>
+                        <a class="border border-danger-subtle text-dark py-2 px-3 rounded-3 ms-3 projectbtn"
+                            href="#">Projects</a>
                     </div>
-                    <!-- <div>
-                        
-                    </div> -->
+                    <div class="mt-5 text-center">
+                        <a href="http://"><i class="bi bi-github fs-4 text-dark me-2"></i></a>
+                        <a href="http://"><i class="bi bi-linkedin fs-4 text-dark"></i></a>
+                    </div>
+
+                    <div class="more-btn text-center">
+                        <a href="http://"><i class="bi bi-arrow-down-circle text-dark fw-bold fs-3"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- End of section one -->
+
+    <!-- Beginning of section two -->
+    <section id="aboutMe">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="description">
+                        <h4>About Me</h4>
+                        <p>Hi there,</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="description">
+                        <h4>About Me</h4>
+                        <p>Hi there,</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End of section two -->
+    <!-- </div> -->
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
