section two completed - added skills section

--- a/index.html
+++ b/index.html
@@ -47,18 +47,28 @@
     <!-- Beginning of section two -->
     <section id="aboutMe">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="description">
-                        <h4>About Me</h4>
-                        <p>Hi there,</p>
-                    </div>
+            <div class="row aboutRow">
+                <div class="col-md-6 my-pic ">
+                    
+
                 </div>
 
-                <div class="col-md-6">
-                    <div class="description">
-                        <h4>About Me</h4>
-                        <p>Hi there,</p>
+                <div class="col-md-6 mt-5">
+                    <div class="skillSection mt-4">
+                        <h6 class="display-6 mt-2 aboutHeading text-center">Skills</h6>
+                    <p class="text-light font-monospace text-sm-start text-md-start text-lg-start text-xl-start fs-5 lh-base ms-3">Backend Developer specializing in:-
+                        <ul class="text-light font-monospace text-sm-start text-md-start text-lg-start text-xl-start  lh-base ms-3">
+                            <li class="ms-2 mb-3"><span id="highlightedSkills">Javascript</span> programming language and currently learning C#.</li>
+                            <li class="ms-2 mb-3">Building applications using <span id="highlightedSkills">NodeJS runtime</span> environment.</li>
+                            <li class="ms-2 mb-3">Developing <span id="highlightedSkills">REST API's</span> in the backend using <span></span>Express Framework.</li>
+                            <li class="ms-2 mb-3">Developing <span id="highlightedSkills">FETCH API's</span> in the frontend using Axios Library.</li>
+                            <li class="ms-2 mb-3">Conversant with <span id="highlightedSkills">MYSQL Database</span> to establish relationships.</li>
+                            <li class="ms-2 " ><span id="highlightedSkills">Sequelize ORM</span> to map JS objects to the database.</li>
+                        </ul>
+                    <!-- <p class="text-light font-monospace text-sm-start text-md-start text-lg-start text-xl-start fs-5 lh-base ms-3">Main programming language is Javascript and currently learning C#.</p> 
+                    <p class="text-light font-monospace text-sm-start text-md-start text-lg-start text-xl-start fs-5 lh-base ms-3">Knowledgable in building REST API's in the backend using Express Framework and FETCH API's in the frontend using Axios Library.</p>
+                    <p class="text-light font-monospace text-sm-start text-md-start text-lg-start text-xl-start fs-5 lh-base ms-3">Conversant with MYSQL Database to establish relationships and Sequelize ORM to map JS objects to the database.</p> -->
+
                     </div>
                 </div>
             </div>
